# liquid-migration

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.eslint.json  tsconfig.json  vite.config.js  vite.config.ts
.husky/: pre-commit
resources/: app-config.json.md  app-config.json.sample
src/: App.tsx  app.tsx  cmd.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cfg.rs  cmd.rs  ferm.conf.patch  main.rs  templates.rs  unsafe-browser.patch  wg-config  wg.rs
src/components/: bootstrap.tsx  button.tsx  confirm-action.tsx  content.tsx  error.tsx  header-bar.tsx  loaded.tsx  menu-bar.tsx  onboarding-done.tsx  onboarding-init.tsx  onboarding-ipaddress.tsx  onboarding-wireguard.tsx  onboarding.tsx  settings.tsx  shell.tsx  start-done.tsx  start-init.tsx  start-password.tsx  start.tsx
src/lib/: actions.ts  types.ts  utils.ts
src/lib/hooks/: service-logger.js
src/machines/: app.ts  app.typegen.ts  onboarding.ts  start.ts  tasks.ts
