[package]
name = "liquid-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
clap = { version = "4.0.29", features = ["derive"] }
eframe = "0.20.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.149", features = ["derive"] }
thiserror = "1.0.37"
tinytemplate = "1.2.1"
x25519-dalek = { version = "2.0.0-pre.1", features = ["serde"] }
