[package]
name = "liquid-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
[target.i686-unknown-linux-musl]
linker = "i486-linux-musl-gcc -arch i386"

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
clap = { version = "4.0.29", features = ["derive"] }
eframe = "0.20.0"
lazy_async_promise = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.149", features = ["derive"] }
thiserror = "1.0.37"
tinytemplate = "1.2.1"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "sync", "macros", "process", "io-util"] }
x25519-dalek = { version = "2.0.0-pre.1", features = ["serde"] }
